--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.11.0",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-table": "^8.21.3",
